document dashboard updated

--- a/templates/absences/index.html.twig
+++ b/templates/absences/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Absences index
+{% block title %}Dashboard Absences
 {% endblock %}
 
 {% block body %}
