--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,10 +39,14 @@
 					{% include "sidemenu.html.twig" %}
 				{% endblock %}
 
-				<div class="container-fluid col-10 col_lg8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
-					{% block body %}{% endblock %}
-				</div>
+				
 
+				<!-- <div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex"> -->
+					{% block body %}{% endblock %}
+				<!-- </div> -->
+
+					{% block connexion %}
+					{% endblock %}
 			</div>
 		</div>
 		</body>
