--- a/templates/absences/new.html.twig
+++ b/templates/absences/new.html.twig
@@ -4,10 +4,11 @@
 {% endblock %}
 
 {% block body %}
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
 	<h1>Signaler une nouvelle absence</h1>
 
 	{{ include('absences/_form.html.twig') }}
 
 	<a class='btn btn-primary' href="{{ path('profil_index') }}">Revenir à l'accueil</a>
-
+</div>
 {% endblock %}
