--- a/templates/documents/show.html.twig
+++ b/templates/documents/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Documents{% endblock %}
 
 {% block body %}
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
     <h1>Documents</h1>
 
     <table class="table">
@@ -30,5 +31,5 @@
 
     <a href="{{ path('documents_edit', {'id': document.id}) }}">edit</a>
 
-    {{ include('documents/_delete_form.html.twig') }}
+    {{ include('documents/_delete_form.html.twig') }}</div>
 {% endblock %}
