--- a/templates/employe/index.html.twig
+++ b/templates/employe/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Dashboard Employés{% endblock %}
 
 {% block body %}
-
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
 {#############################################################################################}
             {###################### ROLE ADMIN ######################}
 {#############################################################################################}
@@ -17,5 +17,5 @@
 
 
 
-
+</div>
 {% endblock %}
