--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,10 @@
 {% endblock %}
 
 {% block body %}
-
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6  p-0 bodyindex">
     <h1>Accueil</h1>
+</div>
+    
 
 {% endblock %}
 
