--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -335,6 +335,10 @@ thead{
   font-size: 12px;
   height: 40vh;
 }
+.cardBody{
+  font-size: 12px;
+  height: 20px;
+}
 h5{
   font-size: 15px;
 }
@@ -370,10 +374,7 @@ h5{
 
 @media screen and (min-width: 960px){
 
-  .cardBody{
-    height:50vh;
-  }
-
+  
 
 
 
