--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -21,7 +21,7 @@
 		<div class="row"> <div class="col-md-4 p-0 col-lg-4 p-2">
 			<div class="card">
 				<div class="flexCard">
-					<div class="card-body cardBody">
+					<div class="card-body hauteurcard">
 						<h5 class="card-title">Envoyer un document</h5>
 						<div>
 							{{ include('documents/_form.html.twig') }}
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 				<div class="card-footer cardFooter">
-					<a href="#" class="btn btn-primary rounded-pill float-right">Envoyer</a>
+					<a href="#" class="btn btnConnexion bgc-pinkrounded-pill float-right invisible">Envoyer</a>
 				</div>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 		<div class="col-md-8 p-0 col-lg-8 p-2">
 			<div class="card">
 				<div class="flexCard">
-					<div class="card-body cardBody">
+					<div class="card-body hauteurcard">
 						<h5 class="card-title">Documents envoyés</h5>
 						<p>
 							<table class="table table-bordered table-striped">
@@ -66,7 +66,7 @@
 
 				</div>
 				<div class="card-footer cardFooter">
-					<a href="#" class="btn btn-primary rounded-pill float-right">Détails</a>
+					<a href="#" class="btn bgc-pink rounded-pill float-right">Détails</a>
 				</div>
 			</div>
 		</div>
