--- a/templates/absences/new.html.twig
+++ b/templates/absences/new.html.twig
@@ -8,6 +8,6 @@
 
 	{{ include('absences/_form.html.twig') }}
 
-	<a class='btn btn-primary' href="{{ path('profil_index') }}">Revenir à l'accueil</a>
+	<a class='btn rounded-pill btn-bleu' href="{{ path('profil_index') }}">Revenir à l'accueil</a>
 
 {% endblock %}
