--- a/templates/absences/edit.html.twig
+++ b/templates/absences/edit.html.twig
@@ -1,13 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Absences{% endblock %}
+{% block title %}
+    Edit Absences
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Absences</h1>
+    <h1>Modifier une absence</h1>
 
     {{ include('absences/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('absences_index') }}">back to list</a>
+    <a href="{{ path('absences_index') }}">Retour à la liste</a>
 
     {{ include('absences/_delete_form.html.twig') }}
 {% endblock %}
