--- a/templates/documents/_delete_form.html.twig
+++ b/templates/documents/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('documents_delete', {'id': document.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('documents_delete', {'id': document.id}) }}" onsubmit="return confirm('Êtes-vous certain(e) de vouloir supprimer cette absence ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ document.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
